--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 services:
-  # frontend:
+
+  frontend:
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    networks:
+      - app_network
+    depends_on:
+      - backend
+
   backend:
     build:
       context: ./backend
@@ -7,9 +18,9 @@ services:
     ports:
       - "8000:8000"
     networks:
-      - backend_network
+      - app_network
     env_file:
-      - ./Backend/.env
+      - ./backend/.env
     depends_on:
       - postgresdb
   
@@ -18,8 +29,8 @@ services:
     ports:
       - "5432:5432"
     env_file:
-      - ./Backend/.env
+      - ./backend/.env
     networks:
-      - backend_network
+      - app_network
 networks:
-  backend_network:
+  app_network:
