--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,17 @@ services:
     depends_on:
       - backend
 
+  fastapi:
+    build:
+      context: ./fastapi
+      dockerfile: Dockerfile
+    ports:
+      - "7000:7000"
+    networks:
+      - app_network
+    depends_on:
+      - backend
+
   backend:
     build:
       context: ./backend
