--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-
   frontend:
     build: 
       context: ./frontend
@@ -14,13 +13,49 @@ services:
   fastapi:
     build:
       context: ./fastapi
-      dockerfile: Dockerfile
+      dockerfile: dockerfiles/fastapi.dockerfile
     ports:
       - "7000:7000"
     networks:
       - app_network
     depends_on:
       - backend
+  
+  celery_worker:
+    build:
+      context: ./fastapi
+      dockerfile: dockerfiles/celery.dockerfile
+    container_name: celery_worker
+    volumes:
+      - ./fastapi/celery_app:/celery_app
+    depends_on:
+      - redis
+    networks:
+      - app_network
+  
+  celery_beat:
+    build:
+      context: ./fastapi
+      dockerfile: dockerfiles/celery.dockerfile
+    container_name: celery_beat
+    command: celery -A celery_app beat --loglevel=info
+    depends_on:
+      - redis
+      - backend
+    networks:
+      - app_network
+
+  redis:
+    image: redis:7.4.2
+    container_name: redis
+    ports:
+      - "6379:6379"
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+      - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
+    networks:
+      - app_network
+    
 
   backend:
     build:
