--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,18 @@ services:
     networks:
       - app_network
 
+  flask_blog:
+    build:
+      context: ./flask_blog
+      dockerfile: dockerfile
+    ports:
+      - "5000:5000"
+    networks:
+      - app_network
+    depends_on:
+      - postgresdb
+      - backend
+
 networks:
   app_network:
 
